# SphinxAI

./: .env.example  .gitignore  README.md
sphinx-ai-app/: README.md  main.py  pyproject.toml  requirements.txt
sphinx-ai-app/corazon/: main_0.py
sphinx-ai-app/corazon copy/: Ejercicios.csv  ejercicios.csv  main.py
sphinx-ai-app/corazon copy/.streamlit/: secrets.toml
sphinx-ai-app/notebooks/: query_db.ipynb
sphinx-ai-app/src/frontend/: app.py  app_v2.py
sphinx-ai-app/src/frontend/pages/: cv_models.py  load_data.py  transcription.py  visualize.py
sphinx-ai-app/src/sphinx_ai/: app.py  audio.py  config.py  eye.py  gestures.py  gestures_analysis.py  head_analyzer.py  pose.py  utilities.py
sphinx-ai-app/src/sphinx_ai/features/: audio.py  eye_analyzer.py  gestures_analysis.py  head_analyzer.py  pose_estimator.py
sphinx-ai-app/src/sphinx_ai/features/pupils/: build_db.ipynb  db_manager.py  load_data.py  save_data_to_db.ipynb
sphinx-ai-app/src/sphinx_ai/features/videos/: io.py  models.py
sphinx-ai-app/src/sphinx_ai/pupils/: load_data.py  pupil_classes.py
sphinx-ai-app/src/sphinx_ai/pupils_glasses/: data.py
sphinx-ai-app/src/sphinx_ai/utils/: logging_config.py  secrets.py
sphinx-ai-app/src/sphinx_ai/videos/: models.py
