[tool.poetry]
name = "sphinx-ai-app"
version = "0.1.0"
description = ""
authors = ["martineserios <mrios90@gmail.com>"]
readme = "README.md"
packages = [{include = "sphinx_ai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0.72"
opencv-contrib-python = "^4.7.0.72"
onnxruntime = "^1.14.1"
ffmpeg = "^1.4"
ffmpeg-python = "^0.2.0"
mediapipe = "^0.10.1"
av = "^10.0.0"
moviepy = "^1.0.3"
cvzone = "^1.6.1"
streamlit-camera-input-live = "^0.2.0"
loguru = "^0.7.0"
cmake = "^3.26.3"
ipython = "^8.12.0"
ipykernel = "^6.24.0"
blue = "^0.9.1"
ipympl = "^0.9.3"
unittest2 = "^1.1.0"
pytest = "^7.4.3"
pydantic = "^2.5.2"
boto3 = "^1.34.25"
ibis-framework = {extras = ["duckdb"], version = "^8.0.0"}
duckdb = "^0.10.0"
polars = "^0.20.7"
pandas = "^2.2.0"
bokeh = "2.4.3"
streamlit-bokeh-events = "^0.1.2"
python-dotenv = "^1.0.1"
audio-recorder-streamlit = "^0.0.9"
soundfile = "^0.12.1"
pydub = "^0.25.1"
streamlit-audiorec = "^0.1.3"
seaborn = "^0.13.2"
harlequin = "^1.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "streamlit run src/frontend/app.py"
